<resources>
    <string name="app_name">IateJerusalem</string>
    <string name="mood">What are you in the mood for?</string>
    <string name="fine_dining">Fine Dining</string>
    <string name="cafe">Cafe</string>
    <string name="other">Other</string>
    <string name="website">Website</string>
    <string name="all">All</string>
    <string name="how_to_find">How do you want to find a restaurant today?</string>
    <string name="type">By type</string>
    <string name="type1">type</string>
    <string name="distance">By distance from you</string>
    <string name="refresh">Refresh</string>
    <string name="service_not_available">Service Not Available</string>
    <string name="invalid_lon_lat_used">Invalid Longitude and/or Latitude</string>
    <string name="no_address_found">No Address Found</string>
    <string name="address_found">Address Found</string>
    <string name="no_geocoder_available">Address service currently unavailable</string>
    <string name="middle_eastern">Middle Eastern</string>
    <string name="middle_east">Middle East</string>
    <string name="map">Map</string>
    <string name="call">Call</string>
    <string name="distance_service_failed">Distance service failed</string>
    <string name="a1">Grand Cafe</string>
    <string name="a2">Dereh Beit Lechem 70</string>
    <string name="a3">Sun-Th 7:30am - 11pm, Fri 7:30am - 3pm, Sat 9pm - 12am</string>
    <string name="a4">02-5702702</string>
    <string name="a5">https://www.facebook.com/Grand-cafe-%D7%92%D7%A8%D7%90%D7%A0%D7%93-%D7%A7%D7%A4%D7%94-159325930851450/</string>
    <string name="a6">Cafe</string>
    <string name="b1">The Eucalyptus</string>
    <string name="b2">14 Hativat Yerushalayim St</string>
    <string name="b3">Sun-Th 6pm - 11pm, Sat 8:30pm - 11pm</string>
    <string name="b4">02-624-4331</string>
    <string name="b5">http://www.the-eucalyptus.com/</string>
    <string name="b6">Fine Dining</string>
    <string name="c1">Station 9</string>
    <string name="c2">David Remez St 4, Jerusalem</string>
    <string name="c3">S-Th 11am - 1am, Fri 11am - 5pm, Sat 6pm - 1am</string>
    <string name="c4">072-212-5152</string>
    <string name="c5">http://station9.co/index.php?p=restaurant</string>
    <string name="c6">Asian</string>
    <string name="d1">Pinati</string>
    <string name="d2">King George St 13</string>
    <string name="d3">Sun-Th 8am - 7 pm, Fri 8am - 3pm</string>
    <string name="d4">02-625-4540</string>
    <string name="d5">No Website</string>
    <string name="d6">Middle Eastern</string>
    <string name="e1">Tmol Shilshom</string>
    <string name="e2">Shimon ha-Tsadik St 13</string>
    <string name="e3">Sun-Th 8:30am - 11pm, Fri 8:30am - 2:30pm, Sat 8pm - 11pm</string>
    <string name="e4">02-623-2758</string>
    <string name="e5">http://www.tmol-shilshom.co.il/</string>
    <string name="e6">Cafe</string>
    <string name="f1">Sophia</string>
    <string name="f2">3 Ze\'ev Jabotinsky</string>
    <string name="f3">Sun-Th 10am - 11pm, Fri 10am - 4pm, Sat 7pm - 11pm</string>
    <string name="f4">02-675-6689</string>
    <string name="f5">https://www.inbalhotel.com/dining</string>
    <string name="f6">Fine Dining</string>
    <string name="g1">Waldorf Astoria</string>
    <string name="g2">Gershon Agron St 26-28</string>
    <string name="g3" />
    <string name="g4">02-542-3333</string>
    <string name="g5">http://waldorfastoria3.hilton.com/en/hotels/israel/waldorf-astoria-jerusalem-JRSWAWA/amenities/restaurants.html</string>
    <string name="g6">Fine Dining</string>
    <string name="h1">Sheyan</string>
    <string name="h2">Ramban St 8</string>
    <string name="h3" />
    <string name="h4">053-613-0942</string>
    <string name="h5">http://www.rol.co.il/sites/sheyan/</string>
    <string name="h6">Asian</string>
    <string name="i1">1868</string>
    <string name="i2">King David 10</string>
    <string name="i3"><![CDATA[Sun-Th 12:30pm - 14:30pm & 18:00 - 22:00, Fri Private events, Sat - hour after Shabbat]]></string>
    <string name="i4">02-622-2312</string>
    <string name="i5">http://1868.co.il/site/en/home.php</string>
    <string name="i6">Fine Dining</string>
    <string name="j1">Piccolino</string>
    <string name="j2">Yo\'el Moshe Salomon St 12</string>
    <string name="j3">Sun-Th 10am - 11pm, Fri 9am - 3pm, Sat 8pm - 11pm</string>
    <string name="j4">02-624-4186</string>
    <string name="j5">http://www.piccolino.co.il/</string>
    <string name="j6">Italian</string>
    <string name="k1">Red Heifer Steakhouse</string>
    <string name="k2">King David 26</string>
    <string name="k3">Sun-Th 5pm-11pm</string>
    <string name="k4">02-624-0504</string>
    <string name="k5">http://redheifersteakhouse.com/</string>
    <string name="k6">Fine Dining</string>
    <string name="l1">Village Green</string>
    <string name="l2">Yafo St 33</string>
    <string name="l3">Sun-Th 9am - 10pm, Fri 9am - 3pm</string>
    <string name="l4">02-625-3065</string>
    <string name="l5">http://5403770.rest.co.il/</string>
    <string name="l6">Vegetarian</string>
    <string name="m1">Azura</string>
    <string name="m2">Ha-Eshkol St 4</string>
    <string name="m3" />
    <string name="m4">02-623-5204</string>
    <string name="m5" />
    <string name="m6">Middle Eastern</string>
    <string name="n1">Darna</string>
    <string name="n2">Yohanan Horkanos St 3</string>
    <string name="n3">Sun-Th 12pm - 3pm, 6:30pm - 12pm, Sat after Shabbat</string>
    <string name="n4">02-624-5406</string>
    <string name="n5">http://www.darna.co.il/pages/english/home_en.php</string>
    <string name="n6">Middle Eastern</string>
    <string name="o1">Caffit</string>
    <string name="o2">Emek Refaim 36</string>
    <string name="o3">Sun-Th 7am - 12am, Fri 7am - 3:30pm, Sat 8:30pm - 12am</string>
    <string name="o4">02-563-5284</string>
    <string name="o5" />
    <string name="o6">Cafe</string>
    <string name="p1">Angelica</string>
    <string name="p2">George Washington 4</string>
    <string name="p3">Sun-Th 12:30pm - 11pm</string>
    <string name="p4">02-623-0056</string>
    <string name="p5">http://www.angelicarest.com/</string>
    <string name="p6">Fine Dining</string>
    <string name="q1">Morgens Cafe</string>
    <string name="q2">Rachel Imenu St 5</string>
    <string name="q3" />
    <string name="q4">02-582-1330</string>
    <string name="q5">http://www.rest.co.il/sites/Default.asp?txtRestID=13978</string>
    <string name="q6">Cafe</string>
    <string name="r1">La Boca</string>
    <string name="r2">Queen Shlomziyon St 8</string>
    <string name="r3">Sun-Th 12pm - 12am, Fri 11:30am - 4pm, Sat 9pm - 12am</string>
    <string name="r4">02-563-5577</string>
    <string name="r5">http://www.laboca.co.il/</string>
    <string name="r6">Latin</string>
    <string name="s1">Gabriel</string>
    <string name="s2">Shim\'on Ben Shatakh St 7</string>
    <string name="s3" />
    <string name="s4">02-624-6444</string>
    <string name="s5">http://gabriel-jerusalem.co.il/</string>
    <string name="s6">Fine Dining</string>
    <string name="t1">Papagio</string>
    <string name="t2">Yad Harutsim St 3</string>
    <string name="t3">Sun - Thurs 12pm - 11pm</string>
    <string name="t4">02-674-5745</string>
    <string name="t5">http://www.papagaio.co.il/</string>
    <string name="t6">Fine Dining</string>
    <string name="u1">Ima</string>
    <string name="u2">Agripas 189</string>
    <string name="u3">Sun-Th 11am-10:30pm, Fri 10am- 1 hour before Shabbat</string>
    <string name="u4">02-624-6860</string>
    <string name="u5">http://www.ima-rest.co.il/en</string>
    <string name="u6">Middle Eastern</string>
    <string name="v1">Tommy\'s</string>
    <string name="v2">HaKeren Hakayemet LeIsrael 21</string>
    <string name="v3">Sun-Th 10am-11pm</string>
    <string name="v4">02-650-8070</string>
    <string name="v5">http://www.tommys.co.il/</string>
    <string name="v6">Burgers</string>
    <string name="w1">Hummus Ben-Sira</string>
    <string name="w2">Ben Sira 3</string>
    <string name="w3">Sun-Th 11am-4am, Fri 11am- 1 hour before Shabbat, Sat 1 Hour after sundown - 4am</string>
    <string name="w4">02-625-3893</string>
    <string name="w5">https://www.facebook.com/pages/Hummus-Ben-Sira/172790416095924</string>
    <string name="w6">Middle Eastern</string>
    <string name="x1">Happy Fish</string>
    <string name="x2">Shlomo Hamelekh 11</string>
    <string name="x3">Sun-Th 12pm-11pm, Fri 10am- 1.5 Hours before Shabbat, Sat 1.5 Hours after Shabbat - 11pm</string>
    <string name="x4">02-548-2230</string>
    <string name="x5">http://www.mamillahotel.com/happyfish</string>
    <string name="x6">Fine Dining</string>
    <string name="y1">Bardak</string>
    <string name="y2">38 Keren Hayesod</string>
    <string name="y3">Sun-Th 12pm- Last Customer, Sat 1 hour after Shabbat - Last Customer</string>
    <string name="y4">02-587-7795</string>
    <string name="y5">https://www.facebook.com/bardakbardq/info</string>
    <string name="y6">Pizza</string>
    <string name="z1">Mamilla Rooftop</string>
    <string name="z2">11 King Solomon</string>
    <string name="z3"><![CDATA[Sun-Th 6pm-11pm, Fri 12pm-2:30pm, Fri & Sat Shabbat Menus, Sat 7:30pm-11pm]]></string>
    <string name="z4">02-548-2230</string>
    <string name="z5">http://www.mamillahotel.com/rooftop</string>
    <string name="z6">Fine Dining</string>
    <string name="aa1">Scala</string>
    <string name="aa2">King David 7</string>
    <string name="aa3">Sun-Th 5:30pm-11pm</string>
    <string name="aa4">02-621-2030</string>
    <string name="aa5">http://www.scala-rest.com/</string>
    <string name="aa6">Fine Dining</string>
    <string name="ab1">Manou BaShouk</string>
    <string name="ab2">Ets Khayim Street</string>
    <string name="ab3">Sun-Th 9am-10pm, Fri 9am-3pm</string>
    <string name="ab4">02-622-8675</string>
    <string name="ab5">https://www.facebook.com/manoubashouk/</string>
    <string name="ab6">Middle Eastern</string>
    <string name="ac1">Medita</string>
    <string name="ac2">Derech Hebron 101</string>
    <string name="ac3" />
    <string name="ac4">02-566-4466</string>
    <string name="ac5">http://www.medita.co.il/</string>
    <string name="ac6">Fine Dining</string>
    <string name="ad1">Fortuna</string>
    <string name="ad2">2 Ha-Armonim</string>
    <string name="ad3" />
    <string name="ad4">02-500-1787</string>
    <string name="ad5" />
    <string name="ad6">Middle Eastern</string>
    <string name="ae1">Luciana</string>
    <string name="ae2">Mamilla parking 8</string>
    <string name="ae3">Sun-Th 9am- Last Customer, Fri 8:30am - 1 hour before Shabbat, Sat after Shabbat - Last Customer</string>
    <string name="ae4">02-502-1000</string>
    <string name="ae5">http://www.luciana.co.il/#english</string>
    <string name="ae6">Italian</string>
    <string name="af1">Agas ve Tapuah</string>
    <string name="af2">Safra Square 6</string>
    <string name="af3">Sun-Th 10am-10pm, Sat after Shabbat - 12am</string>
    <string name="af4">02-623-0280</string>
    <string name="af5">http://agas-ve-tapuah.inforu.mobi/index.php</string>
    <string name="af6">Cafe</string>
    <string name="receiver">.RECEIVER</string>
    <string name="package_name">com.kevin.android.iatejerusalem</string>
    <string name="result_data_key">.RESULT_DATA_KEY</string>
    <string name="location_data_extra">.LOCATION_DATA_EXTRA</string>
    <string name="line_separator">line.separator</string>
    <string name="website1">Website</string>
    <string name="google_nav">google.navigation:q=</string>
    <string name="tel">"tel: "</string>
    <string name="tel_no">"tel: "</string>
    <string name="type_1">type</string>
    <string name="param">param</string>
    <string name="space">" "</string>
    <string name="plus">+</string>
    <string name="comma">,</string>
    <string name="delete" />
    <string name="address_format">+Jerusalem+Israel|</string>
</resources>