<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:orientation="horizontal">

        <RadioGroup
            android:id="@+id/radio_group"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radio_button_all"
                style="@style/RadioButton"
                android:text="@string/all" />

            <RadioButton
                android:id="@+id/radio_button_fine_dining"
                style="@style/RadioButton"
                android:text="@string/fine_dining" />

            <RadioButton
                android:id="@+id/radio_button_middle_east"
                style="@style/RadioButton"
                android:text="@string/middle_eastern" />

            <RadioButton
                android:id="@+id/radio_button_cafe"
                style="@style/RadioButton"
                android:text="@string/cafe" />

            <RadioButton
                android:id="@+id/radio_button_other"
                style="@style/RadioButton"
                android:text="@string/other" />

        </RadioGroup>


    </LinearLayout>


    <ListView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/restaurant_listview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:divider="@color/black"
        android:dividerHeight="0dp"
        android:drawSelectorOnTop="true"></ListView>
</LinearLayout>
