<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_food_choice"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"

    >

    <TextView
        android:id="@+id/info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/mood"
        android:textColor="@color/black"
        android:textSize="28sp"
        android:textStyle="normal|bold" />

    <ScrollView
        android:id="@+id/tabs_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:drawSelectorOnTop="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tab_israeli"
                style="@style/TextTabs"
                android:layout_marginBottom="8dp"
                android:background="@color/middle_eastern"
                android:text="@string/middle_eastern" />

            <TextView
                android:id="@+id/tab_fine_dining"
                style="@style/TextTabs"
                android:layout_marginBottom="8dp"
                android:background="@color/fine_dining"
                android:text="@string/fine_dining" />

            <TextView
                android:id="@+id/tab_cafe"
                style="@style/TextTabs"
                android:layout_marginBottom="8dp"
                android:background="@color/cafe"
                android:text="@string/cafe" />

            <TextView
                android:id="@+id/tab_other"
                style="@style/TextTabs"
                android:layout_marginBottom="8dp"
                android:background="@color/other"
                android:text="@string/other" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>