<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.kevin.android.iatejerusalem.MainActivity">

    <TextView
        android:id="@+id/info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/how_to_find"
        android:textColor="@color/black"
        android:textSize="28sp"
        android:textStyle="normal|bold" />


    <ScrollView
        android:id="@+id/tabs_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@mipmap/foodbackground"
        android:drawSelectorOnTop="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tab_type"
                style="@style/TextTabs"
                android:layout_marginBottom="8dp"
                android:background="@color/light_green"
                android:text="@string/type" />

            <TextView
                android:id="@+id/tab_distance"
                style="@style/TextTabs"
                android:layout_marginBottom="8dp"
                android:background="@color/fine_dining"
                android:text="@string/distance" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>
